--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maquina-js",
-  "version": "1.0.22",
-  "description": "Javascript finite state machine (FSM)",
+  "version": "1.0.23",
+  "description": "maquina.js, just another finite state machine (FSM)",
   "homepage": "https://github.com/josestbernard/maquina-js",
   "main": "./lib/fsm",
   "scripts": {
