--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "ava": "^0.18.2",
+    "debug": "^2.6.3",
     "log": "^1.4.0"
   },
   "devDependencies": {
